# Myxer

./: BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEBIAN.txt  LICENSE.md  Myxer.desktop  PKGBUILD  README.md  README.txt  default.nix  myxer_1.2.0_amd64.deb  nodemon.json  shell.nix
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: about.rs  card.rs  main.rs  meter.rs  meter_f.rs  myxer.rs  pulse.rs  pulse_controller.rs  pulse_data.rs  shared.rs  style.css  style.rs
src/meter/: base_meter.rs  meter.rs  mod.rs  sink_meter.rs  source_meter.rs  stream_meter.rs
src/widget/: meter.rs  notebook.rs  volume.rs
src/window/: about.rs  mod.rs  myxer.rs  profiles.rs  style.css  style.rs
