[package]
name = "myxer"
version = "1.0.0"
description = "A modern Volume Mixer for PulseAudio"
readme = "README.md"
license = "GPL-3.0"
authors = [ "Auri <me@auri.xyz>" ]
homepage = "https://myxer.aurailus.com"
repository = "https://github.com/Aurailus/Myxer"
edition = "2018"

[package.metadata.deb]
name = "Myxer"
section = "sound"
copyright = "(c) Auri Collings, 2021"
extended-description-file = "package.txt"

[dependencies]
gdk = "0.13.2"
glib = "0.10.3"
pango = "0.9.1"
colorsys = "0.6.3"
slice_as_array = "1.1.0"

[dependencies.libpulse]
version = "2.23.0"
package = "libpulse-binding"

[dependencies.gtk]
version = "0.9.0"
features = [ "v3_22" ]

[dependencies.gio]
version = ""
features = [ "v2_44" ]
