[package]
name = "myxer"
version = "1.2.1"
description = "A modern Volume Mixer for PulseAudio"
readme = "README.md"
license = "GPL-3.0"
authors = [ "Auri <me@auri.xyz>", "Erin van der Veen <erin@erinvanderveen.nl>" ]
homepage = "https://github.com/ErinvanderVeen/Myxer"
repository = "https://github.com/ErinvanderVeen/Myxer"
edition = "2018"

[dependencies]
gdk = "0.14"
glib = "0.14"
pango = "0.14"
colorsys = "0.5"
slice_as_array = "1.1"

[dependencies.libpulse]
version = "2.25"
package = "libpulse-binding"

[dependencies.gtk]
version = "0.14"
features = [ "v3_24" ]

[dependencies.gio]
version = "0.14"
features = [ "v2_66" ]
